--- a/public/chart/chart.css
+++ b/public/chart/chart.css
@@ -19,6 +19,7 @@ body {
 .chart {
     position: relative;
     max-width: 400px;
+    width: calc(100vw - 40px);
     height: 200px;
     padding: 10px;
     border-radius: 10px;
