--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 :root {
-    --background: #fff; /* #0D0D0D */
+    --solid-background: #fff;
+    --background: #ffffff70; /* #0D0D0D */
     --border: #ddd; /* #191919 */
     --text: #000; /* #fff */
     --lighter-shade: #e1e1e1;
     --accent: #3232ff; /* # */
     --ready: #3fdf41; /* #dddddd */
     --not-ready: #ff2b2b;
+
+    --dynamic-lights-opacity: 1;
 }
 
 body {
-    background-color: var(--background);
+    background-color: var(--solid-background);
+    position: relative;
+    z-index: -1000;
 }
 
 * {
     color: var(--text);
+    font-family: "Space Mono", monospace;
+    transition: all 10ms;
 }
 
 .chartContainer {
@@ -23,14 +32,26 @@ body {
 }
 
 .avgTimes {
-    position: fixed;
-    left: 10px;
-    bottom: 10px;
+    /*position: fixed;*/
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
+    /*bottom: 10px;*/
+    /*text-align: center;*/
+    text-align: center;
 }
 
 .time {
     font-size: 60px;
+    text-align: center;
 }
+
+.timer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 
 header {
     width: 100%;
@@ -42,6 +63,10 @@ header {
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid var(--border);
+    z-index: 2;
+    background: var(--background);
+    backdrop-filter: blur(500px);
+
 }
 
 .scramble {
@@ -86,9 +111,10 @@ header {
 }
 
 .settingsPanel {
-    width: 25vw;
+    width: 35vw;
     min-width: 30vh;
     background-color: var(--background);
+    backdrop-filter: blur(70px);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -186,9 +212,132 @@ header {
     pointer-events: none;
 }
 
-.times {
 
+.times {
+    width: 27vw;
+    height: 40vh;
+    background: var(--background);
+    backdrop-filter: blur(70px);
+    border: 2px solid var(--border);
+    border-radius: 10px;
+    display: none;
+    flex-direction: column;
+    padding: 10px;
+    overflow-y: scroll;
 }
+
+.times.show {
+    display: flex;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--background);
+    width: 5px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+    border-radius: 10px;
+}
+
+.solve {
+    width: 100%;
+    /*height: 31px;*/
+    display: flex;
+    justify-content: space-between;
+}
+
+.solve > div {
+    width: calc(20% - 10px);
+    border-right: 2px solid var(--border);
+    border-bottom: 2px solid var(--border);
+    padding: 5px;
+}
+
+.solve > div:nth-child(6) {
+    padding-left: 20px;
+}
+
+.solve > div:nth-child(n+5) {
+    border-right: none;
+}
+
+.solve > div:nth-child(n+6) {
+    border-bottom: none;
+    text-align: center;
+}
+
+.solve:last-child > div {
+    border-bottom: none;
+}
+
+.delete > i {
+    color: var(--not-ready);
+}
+
+.bottom-left {
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.showHideTimes {
+    /*background: var(--lighter-shade);?*/
+    width: 10ch;
+    word-break: keep-all;
+    padding: 10px;
+    border: 2px solid var(--border);
+    border-radius: 5px;
+    background: var(--background);
+}
+
+.ball1 {
+    position: fixed;
+    top: -10vh;
+    left: 20vw;
+    width: 20vw;
+    aspect-ratio: 1;
+    background: var(--accent);
+    filter: blur(500px);
+    z-index: -1;
+    opacity: var(--dynamic-lights-opacity);
+    transition: all 1500ms ease-in-out;
+}
+
+.ball2 {
+    position: fixed;
+    bottom: 0;
+    right: 10vw;
+    width: 25vw;
+    aspect-ratio: 1;
+    background: var(--not-ready);
+    filter: blur(300px);
+    z-index: -1;
+    opacity: var(--dynamic-lights-opacity);
+    transition: all 1500ms ease-in-out;
+}
+
+.ball3 {
+    position: fixed;
+    bottom: 0;
+    left: 10vw;
+    width: 15vw;
+    aspect-ratio: 1;
+    background: var(--ready);
+    filter: blur(200px);
+    z-index: -1;
+    opacity: var(--dynamic-lights-opacity);
+    transition: all 1500ms ease-in-out;
+}
+
 
 @media (max-width: 600px) {
     .scramble {
@@ -196,13 +345,7 @@ header {
     }
 
     .avgTimes {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        height: 250px;
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
+        position: relative;
     }
 
     .avgTimes > div {
@@ -212,4 +355,188 @@ header {
     .scrambleDisplayContainer {
         width: 90%;
     }
+
+    .settingsPanel {
+        width: 120%;
+        transform: translate(-50%, -50%) scale(70%);
+    }
+}
+
+.notification {
+    width: 400px;
+    height: 80px;
+    background-color: var(--background);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    transform: translateX(110%);
+    border: 2px solid var(--border);
+    transition: all 250ms;
+}
+
+.notification > .text {
+    font-size: 24px;
+    width: 16ch;
+}
+
+.notification > img {
+    height: 80px;
+    border-radius: 2px;
+}
+
+.notification.showNotif {
+    transform: translateX(0%);
+}
+
+.solveEditPanel {
+    width: 35vw;
+    min-width: 30vh;
+    background-color: var(--background);
+    backdrop-filter: blur(70px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    z-index: 3;
+    pointer-events: none;
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    transition: 250ms all;
+    gap: 15px;
+    overflow: hidden;
+}
+
+.solveEditPanel.show {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.alternateTimes {
+    width: calc(100%);
+    height: 100px;
+    /*background-color: var(--accent);*/
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.alternateTime {
+    position: relative;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 3px;
+    border: 2px solid var(--border);
+    background: var(--background);
+    backdrop-filter: blur(50px) opacity(0.1%);
+}
+
+.alternateTime > .timeText {
+    font-size: 20px;
+}
+
+.alternateTime:first-child {
+    border: 2px solid var(--not-ready);
+}
+
+.alternateTime:nth-child(2) {
+    border: 2px solid var(--ready);
+}
+
+.alternateTime:nth-child(3) {
+    border: 2px solid var(--accent);
+}
+
+.solveEditPanel > .dynamicLight1 {
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+    width: 120px;
+    height: 160px;
+    filter: blur(80px);
+    background: var(--accent);
+    opacity: var(--dynamic-lights-opacity);
+}
+
+.solveEditPanel > .dynamicLight2 {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    width: 120px;
+    height: 160px;
+    filter: blur(80px);
+    /*background: #fff;*/
+    opacity: var(--dynamic-lights-opacity);
+}
+
+.solveEditPanel > .title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.solveEditPanel > .middle > .solveTime {
+    font-size: 45px;
+    position: relative;
+    top: 10px;
+}
+
+.middle {
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    gap: 10px;
+    position: relative;
+}
+
+.modifier {
+    position: absolute;
+    right: 0;
+    bottom: -10px;
+    font-size: 45px;
+}
+
+.middle > .compToAvg.better > .amount {
+    color: var(--ready);
+}
+
+.middle > .compToAvg.worse > .amount {
+    color: var(--not-ready);
+}
+
+.bottom {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+}
+
+.plus2, .dnf, .ok, .del {
+    width: 50px;
+    height: 40px;
+    background: var(--background);
+    border: 2px solid var(--border);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+}
+
+.del {
+    width: 100px;
+    background: var(--not-ready);
+    border: 2px solid var(--not-ready);
+    color: white;
 }
